--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Titolo della pagina</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
- 
-  <link rel="stylesheet" href="style.css">
-  
   <style>
     /* Stili per il logo */
     .container {
@@ -405,140 +402,13 @@ La nostra esperienza e competenza nel campo degli alberi ci consentono di affron
 
 
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    .image-container {
-      height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-bottom: 30px;
-    }
-
-    .image-container img {
-      width: 25%;
-      height: auto;
-      max-width: 100%;
-      max-height: 100%;
-    }
-
-    .contact-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: transparent;
-      margin-top: 20px;
-      margin-bottom: 30px;
-    }
-
-    .contact-container .container {
-      display: flex;
-      flex-wrap: wrap;
-      max-width: 900px;
-      background-color: rgba(52, 77, 131, 0.7); /* Opacità impostata a 0.5 (50%) */
-      border-radius: 5px;
-      overflow: hidden;
-      padding: 20px;
-    }
-
-    .contact-container .sidebar {
-      flex: 1;
-      padding: 30px;
-      background-color: #344d83;
-      color: white;
-    }
-
-    .contact-container .sidebar .contact-info {
-      margin-bottom: 20px;
-    }
-
-    .contact-container .sidebar .contact-info h3 {
-      margin-top: 0;
-    }
-
-    .contact-container .sidebar .contact-info p {
-      margin: 10px 0;
-    }
-
-    .contact-container .sidebar .contact-info a {
-      display: block;
-      margin-bottom: 5px;
-    }
-
-    .contact-container .contact-form-container {
-      flex: 1;
-      padding: 30px;
-      background-color: white;
-    }
-
-    .contact-container .contact-form-container h2 {
-      margin-bottom: 20px;
-    }
-
-    .contact-container .contact-form-container .form-group {
-      margin-bottom: 20px;
-    }
-
-    .contact-container .contact-form-container .form-group label {
-      display: block;
-      font-weight: bold;
-      margin-bottom: 5px;
-    }
-
-    .contact-container .contact-form-container .form-group input[type="text"],
-    .contact-container .contact-form-container .form-group textarea {
-      width: 100%;
-      padding: 10px;
-      font-size: 16px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-    }
-
-    .contact-container .contact-form-container .form-group button {
-      padding: 10px 20px;
-      font-size: 16px;
-      background-color: #344d83;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    @media screen and (max-width: 600px) {
-      .contact-container .container {
-        flex-direction: column;
-        padding: 20px;
-      }
-
-      .contact-container .sidebar {
-        padding: 20px;
-        margin-bottom: 20px;
-      }
-
-      .contact-container .contact-form-container {
-        padding: 20px;
-      }
-    }
-
-    .copyright {
-      background-color: #2a2c47;
-      color: #fff;
-      padding: 30px;
-      text-align: center;
-      font-size: 19px;
-      margin-top: 30px;
-    }
-  </style>
-
-  
-  
-
- <h1 id="dove" style="color:	#f5fffa; text-align: center"><strong>DOVE SIAMO</strong></h1>
+<h1 id="dove" style="color:	#f5fffa; text-align: center"><strong>DOVE SIAMO</strong></h1>
 <h2 style="text-align: center; color:WHITE">Via Carso, 10 - 10092 Beinasco (TO)</h2>
 
-
-  <div class="image-container">
+<div class="image-container">
    <img src="https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/Immagine%20maps.png?raw=true" alt="Immagine" />
-  </div>
+</div>
+
 
 
 <style>
@@ -650,10 +520,150 @@ La nostra esperienza e competenza nel campo degli alberi ci consentono di affron
 
 
 
-  <div class="copyright">
-    &copy; 2023 Zambano Trasporti. Tutti i diritti riservati.
-  </div>
+<div class="copyright">
+  &copy; 2023 Zambano Trasporti. Tutti i diritti riservati.
+  <br>
+  Partita IVA: <span id="iva-placeholder"></span>
+</div>
 </body>
+<style>
+   .image-container {
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 30px;
+   }
+
+   .image-container img {
+      width: 25%;
+      height: auto;
+      max-width: 100%;
+      max-height: 100%;
+   }
+
+   .contact-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: transparent;
+      margin-top: 20px;
+      margin-bottom: 30px;
+   }
+
+   .contact-container .container {
+      display: flex;
+      flex-wrap: wrap;
+      max-width: 900px;
+      background-color: rgba(52, 77, 131, 0.7); /* Opacità impostata a 0.5 (50%) */
+      border-radius: 5px;
+      overflow: hidden;
+      padding: 20px;
+   }
+
+   .contact-container .sidebar {
+      flex: 1;
+      padding: 30px;
+      background-color: #344d83;
+      color: white;
+   }
+
+   .contact-container .sidebar .contact-info {
+      margin-bottom: 20px;
+   }
+
+   .contact-container .sidebar .contact-info h3 {
+      margin-top: 0;
+   }
+
+   .contact-container .sidebar .contact-info p {
+      margin: 10px 0;
+   }
+
+   .contact-container .sidebar .contact-info a {
+      display: block;
+      margin-bottom: 5px;
+   }
+
+   .contact-container .contact-form-container {
+      flex: 1;
+      padding: 30px;
+      background-color: white;
+   }
+
+   .contact-container .contact-form-container h2 {
+      margin-bottom: 20px;
+   }
+
+   .contact-container .contact-form-container .form-group {
+      margin-bottom: 20px;
+   }
+
+   .contact-container .contact-form-container .form-group label {
+      display: block;
+      font-weight: bold;
+      margin-bottom: 5px;
+   }
+
+   .contact-container .contact-form-container .form-group input[type="text"],
+   .contact-container .contact-form-container .form-group textarea {
+      width: 100%;
+      padding: 10px;
+      font-size: 16px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+   }
+
+   .contact-container .contact-form-container .form-group button {
+      padding: 10px 20px;
+      font-size: 16px;
+      background-color: #344d83;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+   }
+
+   @media screen and (max-width: 600px) {
+      .contact-container .container {
+         flex-direction: column;
+         padding: 20px;
+      }
+
+      .contact-container .sidebar {
+         padding: 20px;
+         margin-bottom: 20px;
+      }
+
+      .contact-container .contact-form-container {
+         padding: 20px;
+      }
+      
+      .image-container img {
+         width: 80%;
+         height: auto;
+      }
+   }
+
+   .copyright {
+      background-color: #2a2c47;
+      color: #fff;
+      padding: 30px;
+      text-align: center;
+      font-size: 19px;
+      margin-top: 30px;
+      line-height: 1.5;
+   }
+</style>
+
+<script>
+  // JavaScript per inserire l'IVA nel placeholder
+  var ivaPlaceholder = document.getElementById("iva-placeholder");
+  var ivaValue =  08111620012; // Puoi cambiare il valore dell'IVA qui
+  
+  ivaPlaceholder.innerText = ivaValue;
+</script>
+
  
  <style>
   .scroll-to-top {
@@ -709,5 +719,7 @@ La nostra esperienza e competenza nel campo degli alberi ci consentono di affron
   }
 </script>
 </body>
+
+</html>
 
 </html>
