--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>Titolo della pagina</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style.css">  
+  
   
   <style>
     /* Stili per il logo */
@@ -155,7 +156,7 @@
     <title>Pagina con sfondo fisso</title>
   <style>
     body {
-      background-image: url("https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/camion%20mod.jpg?raw=true");
+      background-image: url("https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/18821f3d-c7c4-4939-953f-4e42a0a49858.jpg?raw=true");
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: cover;
@@ -722,7 +723,5 @@ La nostra esperienza e competenza nel campo degli alberi ci consentono di affron
   }
 </script>
 </body>
-
-</html>
 
 </html>
