--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Titolo della pagina</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<link rel="stylesheet" href="style.css">
+
 </head>
 <body>
   <div class="container">
@@ -50,58 +50,20 @@
 
 
 
-  <style>
-    body {
-      background-image: url(https://img.freepik.com/free-photo/white-background_23-2147730801.jpg);
-      color: white;
-      margin: 0;
-      padding: 0;
-      font-family: 'Roboto Flex', sans-serif;
-    }
-
-    .container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
-      padding: 20px;
-    }
-
-    .box {
-      margin: 20px;
-      text-align: center;
-    }
-
-    .slideshow-container {
-      position: relative;
-      max-width: 90%;
-    }
-
-    .mySlides {
-      display: none;
-    }
-
-    .slideshow-image {
-      width: 100%;
-      height: auto;
-    }
-  </style>
-
  
+<head>
+  <title>Pagina con sfondo fisso</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+  <div class="container">
+    <h1 id="lavori"><strong>I NOSTRI LAVORI</strong></h1>
 
-<h1 id="lavori" style="color:	#f5fffa; text-align: center"><strong>I NOSTRI LAVORI</strong></h1>
+    <!-- Aggiungi qui il contenuto dei tuoi lavori -->
+    
+  </div>
 
 
-  
-    <title>Pagina con sfondo fisso</title>
-  <style>
-    body {
-      background-image: url("https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/18821f3d-c7c4-4939-953f-4e42a0a49858.jpg?raw=true");
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-size: cover;
-    }
-  </style>
   
   
   
@@ -331,23 +293,17 @@ La nostra esperienza e competenza nel campo degli alberi ci consentono di affron
 </body>
 
 
-<script>
-  // JavaScript per inserire l'IVA nel placeholder
-  var ivaPlaceholder = document.getElementById("iva-placeholder");
-  var ivaValue =  08111620012; // Puoi cambiare il valore dell'IVA qui
-  
-  ivaPlaceholder.innerText = ivaValue;
-</script>
-
- 
- 
-
 <!-- Tasto scroll-to-top -->
 <button onclick="scrollToTop()" class="scroll-to-top" id="scrollToTopButton">
   <span class="arrow-icon">⇧</span> <!-- Emoticon personalizzata -->
 </button>
-
 <script>
+  // JavaScript per inserire l'IVA nel placeholder
+  var ivaPlaceholder = document.getElementById("iva-placeholder");
+  var ivaValue = "08111620012"; // Puoi cambiare il valore dell'IVA qui
+  
+  ivaPlaceholder.innerText = ivaValue;
+
   // Funzione per tornare in cima alla pagina
   function scrollToTop() {
     document.body.scrollTop = 0; // Per i browser Safari
@@ -366,9 +322,8 @@ La nostra esperienza e competenza nel campo degli alberi ci consentono di affron
     }
   }
 </script>
+
 </body>
 
 </html>
 
-
-</html>
