--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ La nostra esperienza e competenza nel campo degli alberi ci consentono di affron
 <!-- Tasto scroll-to-top -->
 <button onclick="scrollToTop()" class="scroll-to-top" id="scrollToTopButton">
   <span class="arrow-icon">⇧</span> <!-- Emoticon personalizzata -->
-<button/>
+</button>
 <script>
   // JavaScript per inserire l'IVA nel placeholder
   var ivaPlaceholder = document.getElementById("iva-placeholder");
