--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 
  
 
-
+  Pagina con sfondo fisso
+  <link rel="stylesheet" type="text/css" href="style.css">
 
 
   <div class="container">
@@ -323,7 +324,5 @@ La nostra esperienza e competenza nel campo degli alberi ci consentono di affron
 </script>
 
 </body>
-
-</html>
 
 </html>
