--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Titolo della pagina</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" >
 
 
   
@@ -16,7 +16,7 @@
 
 
 <nav class="menu">
-  <input type="checkbox" id="menu-toggle" class="menu-toggle" />
+  <input type="checkbox" id="menu-toggle" class="menu-toggle" >
   <label for="menu-toggle" class="menu-icon">
     <span class="menu-icon-line"></span>
     <span class="menu-icon-line"></span>
@@ -54,7 +54,7 @@
 
  
 
-
+ 
   <link rel="stylesheet" type="text/css" href="style.css">
 
 
@@ -251,7 +251,7 @@ La nostra esperienza e competenza nel campo degli alberi ci consentono di affron
 <h2 style="text-align: center; color:WHITE">Via Carso, 10 - 10092 Beinasco (TO)</h2>
 
 <div class="image-container">
-   <img src="https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/Immagine%20maps.png?raw=true" alt="Immagine" />
+   <img src="https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/Immagine%20maps.png?raw=true" alt="Immagine" >
 </div>
 
 
