--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@ La nostra missione è fornire servizi di trasporto di oggetti di grandi dimensio
     <img src="https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/Opera-senza-titolo%201%20(2).png?raw=true" alt="Immagine 1">
     <div>
       <h2>Sollevamenti industriali</h2>
-      <h>Il nostro servizio è focalizzato sul trasporto di elementi industriali di varie dimensioni e pesi, compresi macchinari, componenti, attrezzature e prodotti finiti. Collaboriamo strettamente con i nostri clienti per capire le loro esigenze specifiche e fornire soluzioni personalizzate che soddisfino i loro requisiti di trasporto.
+      <h3>Il nostro servizio è focalizzato sul trasporto di elementi industriali di varie dimensioni e pesi, compresi macchinari, componenti, attrezzature e prodotti finiti. Collaboriamo strettamente con i nostri clienti per capire le loro esigenze specifiche e fornire soluzioni personalizzate che soddisfino i loro requisiti di trasporto.
 
-La nostra flotta di veicoli è appositamente progettata per il trasporto di carichi industriali. Disponiamo di camion e rimorchi speciali dotati di attrezzature di sicurezza avanzate e dispositivi di ancoraggio per garantire un trasporto sicuro e senza danni agli elementi industriali.</h>
+La nostra flotta di veicoli è appositamente progettata per il trasporto di carichi industriali. Disponiamo di camion e rimorchi speciali dotati di attrezzature di sicurezza avanzate e dispositivi di ancoraggio per garantire un trasporto sicuro e senza danni agli elementi industriali.</h3>
     </div>
   </div>
 
