--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Titolo della pagina</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" >
 
-
+<link rel="icon" type="image/png" href="https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/logo%20bianco.png?raw=true">
   
 </head>
 
