--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
 
  <main class="content">
   <h1 id="home" style="color:white; font-family: 'Water Brush', sans-serif;">Benvenuti nella nostra azienda</h1>
-  <p style="color:white;">Benvenuti a Zamabno Trasporti S.A.S!</p>
-  <p style="color:white;">Siamo un'azienda familiare con una storia di successo che abbraccia oltre 60 anni di esperienza nel settore dei trasporti. L'azienda nasce nel 1963 per mano di Edmondo Zambano per poi successivamente passare al geometra Anselmo Zambano dopo un pò di anni.</p>
-  <p style="color:white;">Sin dalla nostra fondazione, ci siamo dedicati a fornire soluzioni affidabili e su misura per le esigenze di trasporto dei nostri clienti. Nel corso degli anni, ci siamo evoluti e specializzati per diventare leader nel trasporto di oggetti di grandi dimensioni.</p>
-  <p style="color:white;">La nostra passione per l'eccellenza e l'attenzione ai dettagli ci hanno permesso di sviluppare una flotta di veicoli all'avanguardia e di formare un piccolo team di esperti altamente qualificati.</p>
-  <p style="color:white;">Siamo orgogliosi di poter offrire una vasta gamma di servizi di trasporto, inclusi trasporti pesanti, trasporti speciali e trasporti eccezionali.</p>
-  <p style="color:white;">Sappiamo che ogni carico è unico e richiede un approccio personalizzato. I nostri professionisti altamente specializzati lavorano a stretto contatto con i nostri clienti per capire le loro esigenze specifiche e offrire soluzioni su misura.</p>
-  <p style="color:white;">Dalla pianificazione logistica alla gestione delle autorizzazioni, ci occupiamo di tutto il processo per garantire un trasporto sicuro e puntuale.</p>
-  <p style="color:white;">La nostra reputazione si basa sull'affidabilità, sull'efficienza e sulla cura che mettiamo in ogni trasporto che gestiamo. Siamo consapevoli dell'importanza dei vostri carichi e ci impegniamo a trattarli con la massima attenzione e sicurezza.</p>
-  <p style="color:white;">La vostra soddisfazione è la nostra priorità assoluta.</p>
-  <p style="color:white;">Se state cercando una società di trasporti affidabile, professionale e con esperienza nel settore dei trasporti di oggetti di grandi dimensioni, Zamabno Trasporti è qui per servirvi.</p>
-  <p style="color:white;">Contattateci oggi stesso per discutere delle vostre esigenze di trasporto e scoprire come possiamo aiutarvi a raggiungere i vostri obiettivi.</p>
+  <p> Benvenuti a Zamabno Trasporti S.A.S!</p>
+  <p>Siamo un'azienda familiare con una storia di successo che abbraccia oltre 60 anni di esperienza nel settore dei trasporti. L'azienda nasce nel 1963 per mano di Edmondo Zambano per poi successivamente passare al geometra Anselmo Zambano dopo un pò di anni.</p>
+  <p>Sin dalla nostra fondazione, ci siamo dedicati a fornire soluzioni affidabili e su misura per le esigenze di trasporto dei nostri clienti. Nel corso degli anni, ci siamo evoluti e specializzati per diventare leader nel trasporto di oggetti di grandi dimensioni.</p>
+  <p>La nostra passione per l'eccellenza e l'attenzione ai dettagli ci hanno permesso di sviluppare una flotta di veicoli all'avanguardia e di formare un piccolo team di esperti altamente qualificati.</p>
+  <p>Siamo orgogliosi di poter offrire una vasta gamma di servizi di trasporto, inclusi trasporti pesanti, trasporti speciali e trasporti eccezionali.</p>
+  <p>Sappiamo che ogni carico è unico e richiede un approccio personalizzato. I nostri professionisti altamente specializzati lavorano a stretto contatto con i nostri clienti per capire le loro esigenze specifiche e offrire soluzioni su misura.</p>
+  <p>Dalla pianificazione logistica alla gestione delle autorizzazioni, ci occupiamo di tutto il processo per garantire un trasporto sicuro e puntuale.</p>
+  <p>La nostra reputazione si basa sull'affidabilità, sull'efficienza e sulla cura che mettiamo in ogni trasporto che gestiamo. Siamo consapevoli dell'importanza dei vostri carichi e ci impegniamo a trattarli con la massima attenzione e sicurezza.</p>
+  <p>La vostra soddisfazione è la nostra priorità assoluta.</p>
+  <p>Se state cercando una società di trasporti affidabile, professionale e con esperienza nel settore dei trasporti di oggetti di grandi dimensioni, Zamabno Trasporti è qui per servirvi.</p>
+  <p>Contattateci oggi stesso per discutere delle vostre esigenze di trasporto e scoprire come possiamo aiutarvi a raggiungere i vostri obiettivi.</p>
 </main>
 
 
@@ -136,8 +136,9 @@ La nostra missione è fornire servizi di trasporto di oggetti di grandi dimensio
       <p>Il nostro valore fondamentale è l'impegno per l'eccellenza. Ci impegniamo a fornire servizi di trasporto di oggetti di grandi dimensioni che rappresentino la massima qualità e professionalità. Siamo guidati dalla costante ricerca della perfezione in tutto ciò che facciamo, dalla pianificazione logistica alla consegna finale. Mettiamo l'accento sull'attenzione ai dettagli e sulla cura nella gestione dei carichi, garantendo che ogni trasporto venga eseguito con la massima precisione e sicurezza. Ci preoccupiamo sinceramente del successo dei nostri clienti e lavoriamo instancabilmente per superare le loro aspettative. La nostra dedizione all'eccellenza si riflette in ogni aspetto del nostro lavoro, offrendo un valore tangibile e duraturo ai nostri clienti.</p>
     </div>
   </div>
- <h1 id="referenze" style="color:	#f5fffa; text-align: center"><strong>REFERENZE</strong></h1>
-<h2 style="text-align: center; color:WHITE">Trasporto per un'azienda vinicola</h2>
+<h1 id="referenze">REFERENZE</h1>
+<h2>Trasporto per un'azienda vinicola</h2>
+
 
   <div class="my-image-grid">
     <div class="image-container">
@@ -157,7 +158,8 @@ La nostra missione è fornire servizi di trasporto di oggetti di grandi dimensio
   
   
   
- <h1 id="servizi" style="color:	#f5fffa; text-align: center"><strong>SERVIZI</strong></h1>
+<h1 id="servizi">SERVIZI</h1>
+
 
   <div class="quadrant">
     <img src="https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/Opera-senza-titolo%201%20(2).png?raw=true" alt="Immagine 1">
@@ -226,8 +228,9 @@ La nostra esperienza e competenza nel campo degli alberi ci consentono di affron
 
 
 
-<h1 id="dove" style="color:	#f5fffa; text-align: center"><strong>DOVE SIAMO</strong></h1>
-<h2 style="text-align: center; color:WHITE">Via Carso, 10 - 10092 Beinasco (TO)</h2>
+<h1 id="dove">DOVE SIAMO</h1>
+<h2>Via Carso, 10 - 10092 Beinasco (TO)</h2>
+
 
 <div class="image-container">
    <img src="https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/Immagine%20maps.png?raw=true" alt="Immagine" >
