--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
  <main class="content">
   <h1 id="home" style="color:white; font-family: 'Water Brush', sans-serif;">Benvenuti nella nostra azienda</h1>
-  <p> Benvenuti a Zamabno Trasporti S.A.S!</p>
+  <p> Benvenuti alla Zambano Trasporti S.A.S!</p>
   <p>Siamo un'azienda familiare con una storia di successo che abbraccia oltre 60 anni di esperienza nel settore dei trasporti. L'azienda nasce nel 1963 per mano di Edmondo Zambano per poi successivamente passare al geometra Anselmo Zambano dopo un pò di anni.</p>
   <p>Sin dalla nostra fondazione, ci siamo dedicati a fornire soluzioni affidabili e su misura per le esigenze di trasporto dei nostri clienti. Nel corso degli anni, ci siamo evoluti e specializzati per diventare leader nel trasporto di oggetti di grandi dimensioni.</p>
   <p>La nostra passione per l'eccellenza e l'attenzione ai dettagli ci hanno permesso di sviluppare una flotta di veicoli all'avanguardia e di formare un piccolo team di esperti altamente qualificati.</p>
