--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ La nostra esperienza e competenza nel campo degli alberi ci consentono di affron
 
 
 
-<h1 id="dove">DOVE SIAMO</h1>
+<h1 id="dove">DOVE TROVARCI</h1>
 <h2>Via Carso, 10 - 10092 Beinasco (TO)</h2>
 
 
